--- a/css/styles.css
+++ b/css/styles.css
@@ -358,20 +358,20 @@ li {
   margin-right: 30px;
 }
 
-.over-text {
+.item-what-do {
   position: relative;
 }
 
-.doing-text {
+.text {
   position: absolute;
   top: 100%;
   height: 70px;
   width: 100%;
   background-color: rgba(47, 48, 58, 0.8);
   transform: translate(0, -100%);
-}
-
-.text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: var(--text-hover-wight);
   font-family: "Roboto", sans-serif;
   font-weight: 700;
@@ -379,8 +379,6 @@ li {
   line-height: 1.4;
   text-align: center;
   text-transform: uppercase;
-  padding-top: 27px;
-  padding-bottom: 27px;
 }
 
 /*_________________Section Team________________________*/
@@ -768,9 +766,11 @@ li {
   top: 0;
   left: 50%;
   transform: translate(-50%, 0);
-  height: 1024px;
-  width: 1600px;
+  height: 100%;
+  width: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opacity 250ms var(--animating);
 }
 
 .backdrop.is-hidden {
